finished with catalog section

--- a/references.bib
+++ b/references.bib
@@ -99,11 +99,31 @@
   Journal                  = {Geological Survey of Iran}
 }
 
-@Book{Ambraseys2005,
-  Title                    = {A history of {P}ersian earthquakes},
-  Author                   = {Ambraseys, Nicholas Nicholas and Melville, Charles Peter},
+@Book{Ambraseys_2009_Book,
+  Title                    = {Earthquakes in the {M}editerranean and {M}iddle {E}ast, a multidisciplinary study of seismicity up to 1900},
+  Author                   = {Ambraseys, N. N.},
   Publisher                = {Cambridge University Press},
-  Year                     = {2005}
+  Year                     = {2009},
+
+  Address                  = {Cambridge, United Kingdom}
+}
+
+@Book{Ambraseys_1982_Book,
+  Title                    = {A history of {P}ersian earthquakes},
+  Author                   = {Ambraseys, N. N. and Melville, C. P.},
+  Publisher                = {Cambridge University Press},
+  Year                     = {1982},
+
+  Address                  = {Cambridge, United Kingdom}
+}
+
+@Book{Ambraseys_2005_Book,
+  Title                    = {The seismicity of {E}gypt, {A}rabia and the {R}ed {S}ea: {A} historical review},
+  Author                   = {Ambraseys, N. N. and Melville, C. P. and Adams, R. D.},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2005},
+
+  Address                  = {Cambridge, United Kingdom}
 }
 
 @Book{Baker2008,
@@ -174,11 +194,11 @@
   Doi                      = {10.1029/GD003p0033}
 }
 
-@Book{Berberian1994,
-  Title                    = {Natural hazards and the first earthquake catalogue of Iran: historical hazards in Iran prior to 1900},
+@Book{Berberian_1995_Tech,
+  Title                    = {Natural Hazards and the First Earthquake Catalogue of {I}ran: {V}olume 1: {H}istorical Hazards in {I}ran Prior to 1900},
   Author                   = {Berberian, Manuel},
-  Publisher                = {UNESCO},
-  Year                     = {1994},
+  Publisher                = {A UNESCO/IIEES publication during UN/IDNDR, International Institute of Earthquake Engineering and Seismology, 603 (in English) + 66 (in Persian) pp.},
+  Year                     = {1995},
 
   Owner                    = {naeem},
   Timestamp                = {2016.01.10}
