--- a/seismic-catalog.tex
+++ b/seismic-catalog.tex
@@ -2,34 +2,53 @@
 \begin{figure*}[t] 
 	\centering
 	\includegraphics[width=0.9\textwidth]{figures/pdf/figure-03}
-	\caption{Location of events considered in the compiled seismic catalog. (a) Historical seismicity prior to 1900 for $M_w \geq 4$ \citep[after][]{Zare2014}. (b) Instrumental seismicity up until December 2015 for $M_w \geq 3$ (IIEES) and $M_w \geq 4$ \citep[after][]{Zare2014}. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event. The borderlines of the seismic zones shown in Fig.~\ref{fig:regional} are shown in the background in white, along with the light gray shaded relief.}
+	\caption{Location of events considered in the compiled seismic catalog. (a) Historical seismicity prior to 1900 for $M_w \geq 4$ \citep[after][]{Zare2014}. (b) Instrumental seismicity up until December 2015 for $M_w \geq 3$ (IIEES) and $M_w \geq 4$ \citep[after][]{Zare2014}. Size of symbols is proportional to the magnitude of the events. In the case of the historical seismicity catalog, the color fill indicates the year of the event. The borderlines of the seismic zones shown in Fig.~\ref{fig:iran} are shown in the background in white, along with the light gray shaded relief.}
 	\label{fig:catalog}
 \end{figure*}
 
 \section{Seismic Catalog}
 
-A fundamental step in regional seismic hazard analysis is the compilation of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Instrumental data are easily accessible through agencies such as the International Institute of Earthquake Engineering and Seismology (IIEES), the Iranian Seismological Center (IRSC) at the University of Tehran, or the Iranian Strong Motion Network operated by the Building and Housing Research Center (BHRC). Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{moinfar1994}, \citet{Berberian1994}, and \citet{Ambraseys2005}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
+A fundamental step in regional seismic hazard analysis is the compilation of a reliable seismic catalog that includes both historically documented and instrumentally recorded earthquakes. Nowadays, instrumental datasets are easily accessible through international, regional, and local agencies. Historical data, on the other hand, lends itself to subjective interpretation. Notable previous efforts to compose uniform earthquake catalogs for Iran include but are not limited to \citet{Ambraseys_1982_Book}, \citet{moinfar1994}, and \citet{Berberian_1995_Tech}. These studies, however, differ from each other in their use of magnitude scales or magnitude conversion rules, and the extent to which they accept historical accounts as valid data. 
 
-According to \citet{Ambraseys2005}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard, however, use moment magnitude ($M_w$) instead. 
+According to \citet{Ambraseys_1982_Book}, there is evidence of earthquakes as far back as the third millennium B.C., yet some of those accounts are difficult to interpret. \citet{Mirzaei1997} compiled a catalog with historical events dating back to the 4th century B.C.~and instrumental earthquakes through 1994 in which a comprehensive list of studies was considered and magnitudes uniformly converted to surface wave magnitude ($M_s$). Most ground motion prediction equations employed today in seismic hazard, however, use moment magnitude ($M_w$) instead. 
 
-Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013}, and \citet{Zare2014} are all compiled using magnitudes converted to $M_w$. \citet{Karimiparidari2013}, for instance, compiled a catalog for Iran and adjacent areas using international and national datasets including events up until April, 2010 with $M_w > 5$. They developed relationships between moment magnitude and other magnitude scales and removed foreshocks and aftershocks using the procedure by \citet{Gardner1974}. \citet{Shahvar2013} built a catalog for the Iranian plateau for events with $M_w \geq 4$ merging data from two local and seven international datasets for the 1900--2011 period. They used the orthogonal regression method by \citet{Castellaro2006} to derive magnitude conversions and removed foreshocks and aftershocks according to the procedure by \citet{Uhrhammer_1986_EN}. In addition, \citet{Shahvar2013} provided a declustered version of the catalog. 
+Recent catalogs such as that by \citet{Karimiparidari2013}, \citet{Shahvar2013}, and \citet{Zare2014} are all compiled using magnitudes converted to $M_w$. \citet{Karimiparidari2013}, for instance, compiled a catalog for Iran and adjacent areas using international and national datasets including events up until April, 2010, with $M_w > 5$. They developed relationships between moment magnitude and other magnitude scales and removed foreshocks and aftershocks using the procedure by \citet{Gardner1974}. \citet{Shahvar2013} built a catalog for the Iranian plateau for events with $M_w \geq 4$ merging data from two local and seven international datasets for the 1900--2011 period. They used the orthogonal regression method by \citet{Castellaro2006} to derive magnitude conversions and removed foreshocks and aftershocks according to the procedure by \citet{Uhrhammer_1986_EN}. In addition, \citet{Shahvar2013} provided a declustered version of the catalog. 
 
-In turn, the catalog by \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, including events from Afghanistan, Pakis\-tan, Saudi Arabia, the Caucasus and parts of Turkey, in addition to the Alborz-Azerbaijan, Zagros, central Iran, Kopeh-Dagh and Makran seismic zones. All events in this catalog are converted to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}; and declustered using various methods \citep{Gardner1974, Reasenberg1985, Uhrhammer_1986_EN}. In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found these methods to yield consistent results. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
+In this study we adopt the catalog compiled for the Middle East by \citet{Zare2014} and complement it for our particular region of interest. This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project. It combines over 28 thousand records from 26 datasets with both historical and instrumental seismicity. Instrumental datasets included information from international, regional, and local agencies and networks, such as the U.S.~Geological Survey's National Earthquake Information Center (NEIC), the International Seismological Center (ISC) bulletins, the International Institute of Earthquake Engineering and Seismology (IIEES), the Iranian Seismological Center (IRSC) at the University of Tehran, and the Iranian Strong Motion Network operated by the Building and Housing Research Center (BHRC), among others. Historical data included the datasets prepared over the years by \citet{Ambraseys_1982_Book}, \citet{Ambraseys_2005_Book}, and \citet{Ambraseys_2009_Book}.
 
-In this study we adopt the catalog compiled by \citet{Zare2014} for both historical and instrumental earthquakes. This catalog includes events of magnitude $M_w \geq 4$ from 550 A.d.~to December 1999. We complemented it with events $M \geq 3$ occurred between January 2000 and December 2015 obtained from the IIEES database. Our analysis of this dataset indicated that the catalog satisfies completeness from 2005 onward. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. 
+For the particular case of our region of interest, the catalog prepared by \citet{Zare2014} included events $M_w \geq 4$ between 550 B.C.~and 2006. We took information from the catalog up to December 1999, and complemented it by adding newer and more complete data from IIEES for events $M \geq 3$ between January 2000 and December 2015. While we recognize that earthquakes in the range $3 \leq M_w \leq 4$ are unlikely to cause structural damage, we include them as a means to feed the model with information about epicentral locations with potential for future larger magnitude earthquakes. By contrast, a recent seismic hazard analysis done for Iran by \citet{Khodaverdian_2016_BSSA} used a similar for events $M_w \geq 4$ catalog but only included data up until 2011, which excluded the 2012 $M_w$ 6.4 Tabriz earthquake that severely damaged the northeast part of the country.
+
+In terms of magnitude scale, the events in \citet{Zare2014} were converted from $M_L$, $M_s$ and $m_b$ scales to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}. For consistency, we used the same conversion relationships for the portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015. The dataset from IIEES also contained events reported by ISC on a duration magnitude ($M_D$) scale. In these cases we used the empirical relationship introduced by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w \geq 4.5$ events, we extrapolated the equation for lower magnitudes and found the results to adjust well with the general trend. 
+
+Selection and declustering was also done in consistence with the original catalog, using the methods by \citet{Gardner1974}, \citet{Reasenberg1985} and \citet{Uhrhammer_1986_EN}. We obtained the declustered version of \citet{Zare2014}, selected 7,478 earthquakes within our region of interest, and removed 605 foreshocks and 2,917 aftershocks, leaving only those events in agreement with a Poissonian model. The same procedure was used for the added events between 2000 and 2015. These steps altogether allowed us to preserve compatibility with the original catalog while also including the most recent events. The final set of events compiled for this study is shown in Fig.~\ref{fig:catalog}.
 
 
+% *********************************************************************************************************************
+% *********************************************************************************************************************
 
+% ***** In addition, \citet{Zare2014} provided the catalog completeness for different magnitude ranges using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and \citet{richter1958}, and the frequency magnitude distribution obtained using ZMAP \citep{Wiemer2001}, and found these methods to yield consistent results. 
 
+% **** Our analysis of this dataset indicated that the catalog satisfies completeness from 2005 onward. 
 
+% *********************************************************************************************************************
+% *********************************************************************************************************************
 
+% \citet{Zare2014} uses both historical data prior to 1900 and instrumental data up until 2006, including events from Afghanistan, Pakis\-tan, Saudi Arabia, the Caucasus and parts of Turkey, in addition to the Alborz-Azerbaijan, Zagros, central Iran, Kopeh-Dagh and Makran seismic zones. 
+
+% All events in this catalog are converted to $M_w$ using relationships derived by the authors and by \citet{Escordilis_2006_JS}; and declustered using various methods \citep{Gardner1974, Reasenberg1985, Uhrhammer_1986_EN}. 
+
+% This catalog is particularly relevant because it is published as part of the current effort by the Global Earthquake Model (GEM) partnership and the Earthquake Model of the Middle East (EMME) project.
+
+% In this study we adopt the catalog compiled by \citet{Zare2014} for both historical and instrumental earthquakes. This catalog includes events of magnitude $M_w \geq 4$ from 550 A.d.~to December 1999. 
+
+% We complemented it with events $M \geq 3$ occurred between January 2000 and December 2015 obtained from the IIEES database. 
 
 % The result of our compilation is shown in Fig.~\ref{fig:catalog}, which includes maps for historical and instrumental seismicity. 
 % The following sections provide additional details about magnitude conversion and de\-clustering of the events in our combined catalog.
 
-The portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015 contained event reports that use different magnitude scales. We converted all events with magnitudes in $M_L$, $M_s$, and $mb$ scales to $M_w$ using the same conversion relationships used by \citet{Zare2014}, which allowed us to preserve compatibility with the historical and instrumental seismicity catalog adopted from the same work of \citet{Zare2014}. In addition, the dataset from IIEES also contained events reported with duration magnitude ($M_D$), as reported by the International Seismological Centre (ISC). In these cases we used the empirical relationship developed by \citet{Deniz2010} to convert $M_D$ to $M_w$. Although this relationship was derived based on a dataset for $M_w>=4.5$ events, we extrapolate the equation for lower magnitude and found that results to adjust well with the general trend, which should provide for good estimates of the $a$-value in the Gutenberg-Richter equation.
+% The portion of the catalog obtained from IIEES for $M \geq 3$ earthquakes between 2000 and 2015 contained event reports that use different magnitude scales. We converted all events with magnitudes in $M_L$, $M_s$, and $mb$ scales to $M_w$ using the same conversion relationships used by \citet{Zare2014}, which allowed us to preserve compatibility with the historical and instrumental seismicity catalog adopted from the same work of \citet{Zare2014}. 
 
-Last but not least important, we declustered the catalog prior to using it in the assessment of seismic hazard for the region of interest. This entailed the removal of foreshocks and aftershocks from the catalog to adjust the dataset to include only those events in agreement with a Poissonian model, which is a well-accepted model for seismic sources. Out of the original 7,478 earthquakes in the assembled catalog for the seismic regions of Azerbaijan, Alborz and Kopeh-Dagh, we removed 605 foreshocks and 2,917 aftershocks. The resulting final set of events in the catalog compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes maps for both historical and instrumental seismicity.
+% Last but not least important, we declustered the catalog prior to using it in the assessment of seismic hazard for the region of interest. This entailed the removal of foreshocks and aftershocks from the catalog to adjust the dataset to include only those events in agreement with a Poissonian model, which is a well-accepted model for seismic sources. Out of the original 7,478 earthquakes in the assembled catalog for the seismic regions of Azerbaijan, Alborz and Kopeh-Dagh, we removed 605 foreshocks and 2,917 aftershocks. The resulting final set of events in the catalog compiled for this study is shown in Fig.~\ref{fig:catalog}, which includes maps for both historical and instrumental seismicity.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
@@ -40,7 +59,6 @@ Last but not least important, we declustered the catalog prior to using it in th
 % \subsection{Historical  and Instrumental Seismicity}
 
 % Uniform earthquake catalog is the most important factor in seismic hazard analysis of a region.  Different studies have been conducted in order to prepare a uniform catalog for Iranian Earthquake. Historical event interpretation and different magnitude conversion relationships are some of the factors which make all these catalogs different. Among different sources \citet{Ambraseys2005}, \citet{Berberian1994}, and \citet{moinfar1994} are some of the main sources for Iranian earthquake catalog. These catalogs contain historical and instrumental earthquakes that have been reported in literature and national and international networks. According to \citet{Ambraseys2005}, there are some scattered indication of earthquake effects  back to third millinuim BC. However, adequate documentary coverage of individual events begins from seventh century A.D. \citet{Mirzaei1997} provided a comprehensive list of studies that have been done in compilation a uniform catalog for Iranian earthquakes in order to prepare a uniform catalog of earthquake (all earthquakes are converted to surface wave magnitude Ms) for seismic hazard assessment in Iran. The catalog is covering the period of 4th century B.C. through 1994. The instrumental data is achievable from three national agencies including IIEES, International Institute of Earthquake Engineering and Seismology; IRSC, The Iranian seismological center, University of Tehran; and BHRC, Building and Housing Research Center (Iran Strong Motion Network) (For more information about these networks see \citet{Karimiparidari2013}).
-
 
 % Many most of attenuation relationship use  moment magnitude $M_w$ as an input for the equation \citep{Douglas2011}. Moment magnitude is not suffering from saturation and has physical meaning \citep{Kanamori1977}. Due to mentioned reasons Mw has become a most appropriate magnitude scale in recent studies. 
 
@@ -63,12 +81,10 @@ Last but not least important, we declustered the catalog prior to using it in th
 % \label{fig:historical}
 % \end{figure*}
 
-
 % \subsubsection{Declustering}
 
 % It is generally assumed that the seismicity of each tectonic seismic source follows a Poissonian occurrence process. Therefore, in order to accomplish this, we declustered the earthquake catalog. In compiling the catalog of events, foreshocks and aftershocks were removed using a declustering methodology \citep{Gardner1974}. For north Iran (lon: 42-62.5, lat: 33-41), from 7478 earthquake event we removed 605 Foreshocks and 2917 aftershocks.
 % Whole data that we used for seismicity parameters of Zagros and Central Iran tectonic seismic regions are not included in these numbers. Fig.~\ref{fig:instrumental} shows the epicenter of declustered instrumental  earthquakes.
-
 
 % \begin{figure*}[!ht] 
 
@@ -77,7 +93,6 @@ Last but not least important, we declustered the catalog prior to using it in th
 % \caption{Declustered instrumental seismicity map (after 1900) of Northern Iran. The study areas are separated at longitude of 48$^{\circ}$ and 55$^{\circ}$ . } 
 % \label{fig:instrumental}
 % \end{figure*}
-
 
 % \subsection{Divisions}
 
