started methodology section

--- a/content.tex
+++ b/content.tex
@@ -3,9 +3,9 @@
 
 \input{region-of-interest}
 
-\input{seismic-catalog}
+\input{catalog}
 
-% \input{seismic_hazard}
+\input{hazard}
 
 % \input{analysis_parameters}
 
