--- a/references.bib
+++ b/references.bib
@@ -515,9 +515,7 @@
   Pages                    = {185--188},
   Volume                   = {34},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2016.01.10}
+  Publisher                = {Seismological Society of America}
 }
 
 @InProceedings{hamdache2008,
@@ -676,9 +674,8 @@
   Pages                    = {479--498},
   Volume                   = {91},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Doi                      = {10.1785/0120000060},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Lapajne1997,
@@ -789,7 +786,7 @@
 @InProceedings{Moschetti2014,
   Title                    = {Development of an adaptively smoothed seismicity model for {A}laska and implications for seismic hazard},
   Author                   = {Moschetti, MP and Mueller, CS and Boyd, OS and Petersen, MD},
-  Booktitle                = {10th National Conference on Earthquake Engineering},
+  Booktitle                = {Proceedings of the 10th National Conference on Earthquake Engineering},
   Year                     = {2014},
 
   Address                  = {July 21--25, Anchorage, Alaska},
